--- a/pom.xml
+++ b/pom.xml
@@ -1472,7 +1472,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
                 <version>1.5</version>
-
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
@@ -1656,14 +1655,14 @@
                     </configuration>
                 </plugin>
                 <!--部署到中央maven库-->
-                <plugin>
+                <!--<plugin>
                     <artifactId>maven-scm-plugin</artifactId>
                     <version>1.7</version>
                     <configuration>
                         <scmVersionType>branch</scmVersionType>
                         <scmVersion>master</scmVersion>
                     </configuration>
-                </plugin>
+                </plugin>-->
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>2.3.2</version>
@@ -1734,18 +1733,6 @@
                             </goals>
                         </execution>
                     </executions>
-                </plugin>
-
-                <plugin>
-                    <groupId>org.sonatype.plugins</groupId>
-                    <artifactId>nexus-staging-maven-plugin</artifactId>
-                    <version>1.6.2</version>
-                    <extensions>true</extensions>
-                    <configuration>
-                        <serverId>ossrh</serverId>
-                        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                        <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                    </configuration>
                 </plugin>
 
                 <plugin>
