--- a/pom.xml
+++ b/pom.xml
@@ -1382,8 +1382,8 @@
     </distributionManagement>
 
     <scm>
-        <connection>scm:git:ssh://git@github.com/blademainer/common_utils.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com/blademainer/common_utils.git</developerConnection>
+        <connection>scm:git:http://github.com/blademainer/common_utils.git</connection>
+        <developerConnection>scm:git:git@github.com/blademainer/common_utils.git</developerConnection>
         <!--<developerConnection>scm:git:ssh://git@github.com:blademainer/common_utils.git</developerConnection>-->
         <url>https://github.com/blademainer/common_utils</url>
         <tag>common_utils-0.0.1</tag>
