--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     </modules>
     <artifactId>common_utils</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.1</version>
+    <version>0.0.1-SNAPSHOT</version>
     <description>提供最基础的工具类</description>
     <url>https://github.com/blademainer/common_utils</url>
 
@@ -1386,7 +1386,7 @@
         <developerConnection>scm:git:git@github.com:blademainer/common_utils.git</developerConnection>
         <!--<developerConnection>scm:git:ssh://git@github.com:blademainer/common_utils.git</developerConnection>-->
         <url>https://github.com/blademainer/common_utils</url>
-        <tag>common_utils-0.0.1_a</tag>
+        <tag>common_utils-0.0.1</tag>
     </scm>
 
     <build>
