--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <name>common_utils</name>
     <artifactId>common_utils</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.3-SNAPSHOT</version>
+    <version>0.0.3</version>
     <description>提供最基础的工具类</description>
     <url>https://github.com/blademainer/common_utils</url>
 
@@ -77,7 +77,7 @@
         <!-- <log4j.version>2.0-beta9</log4j.version> <log4j.sl4j.version>2.0-alpha2</log4j.sl4j.version> -->
         <!--对应hibernate版本为4.3.0.Final以上-->
         <!--<javax.persistence.version>2.1</javax.persistence.version>-->
-        <common_utils.version>0.0.3-SNAPSHOT</common_utils.version>
+        <common_utils.version>0.0.3</common_utils.version>
         <aliyun-openservices.version>1.2.2</aliyun-openservices.version>
         <activemq.version>5.9.0</activemq.version>
         <jsr250.version>1.0</jsr250.version>
@@ -1387,8 +1387,171 @@
         <developerConnection>scm:git:git@github.com:blademainer/common_utils.git</developerConnection>
         <!--<developerConnection>scm:git:ssh://git@github.com:blademainer/common_utils.git</developerConnection>-->
         <url>https://github.com/blademainer/common_utils</url>
-        <tag>common_utils-0.0.1</tag>
+        <tag>common_utils-0.0.3</tag>
     </scm>
+
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <!--<plugin>
+                        <groupId>org.apache.felix</groupId>
+                        <artifactId>maven-bundle-plugin</artifactId>
+                        <version>2.3.7</version>
+                        <extensions>true</extensions>
+                    </plugin>-->
+                    <!--<plugin>
+                        <artifactId>maven-deploy-plugin</artifactId>
+                        <version>2.8.1</version>
+                        <configuration>
+                            <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo
+                            </altDeploymentRepository>
+                        </configuration>
+                    </plugin>-->
+                    <plugin>
+                        <artifactId>maven-scm-plugin</artifactId>
+                        <version>1.7</version>
+                        <configuration>
+                            <scmVersionType>branch</scmVersionType>
+                            <scmVersion>master</scmVersion>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>2.3.2</version>
+                        <configuration>
+                            <source>1.7</source>
+                            <target>1.7</target>
+                        </configuration>
+                    </plugin>
+                    <!--   要将源码放上去，需要加入这个插件    -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>2.1</version>
+                        <configuration>
+                            <attach>true</attach>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>compile</phase>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>2.9.1</version>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                        <version>1.6.2</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <serverId>ossrh</serverId>
+                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.5</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-release-plugin</artifactId>
+                        <version>2.5</version>
+                        <configuration>
+                            <autoVersionSubmodules>true</autoVersionSubmodules>
+                            <useReleaseProfile>false</useReleaseProfile>
+                            <goals>deploy</goals>
+                            <checkModificationExcludes>
+                                <checkModificationExclude>**/pom.xml</checkModificationExclude>
+                            </checkModificationExcludes>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-scm-plugin</artifactId>
+                        <version>1.9</version>
+                        <configuration>
+                            <scmVersionType>branch</scmVersionType>
+                            <scmVersion>master</scmVersion>
+                        </configuration>
+                    </plugin>
+
+                    <!-- 将生成的jar部署到github上 -->
+                    <!--<plugin>
+                        <groupId>com.github.github</groupId>
+                        <artifactId>site-maven-plugin</artifactId>
+                        <version>0.9</version>
+                        <configuration>
+                            <message>Maven artifacts for ${project.version}</message>
+                            &lt;!&ndash; git commit message &ndash;&gt;
+                            <noJekyll>true</noJekyll>
+                            &lt;!&ndash; disable webpage processing &ndash;&gt;
+                            <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
+                            &lt;!&ndash; matches distribution management repository url above &ndash;&gt;
+                            &lt;!&ndash;<outputDirectory>${settings.localRepository}</outputDirectory>&ndash;&gt;
+                            &lt;!&ndash;gh-pages&ndash;&gt;
+                            &lt;!&ndash;<branch>refs/heads/gh-pages</branch>&ndash;&gt;
+                            &lt;!&ndash; remote branch name &ndash;&gt;
+                            <includes>
+                                <include>**/*</include>
+                            </includes>
+                            <repositoryName>${project.artifactId}</repositoryName>
+                            &lt;!&ndash; github repo name &ndash;&gt;
+                            <repositoryOwner>blademainer</repositoryOwner>
+                            &lt;!&ndash; github username &ndash;&gt;
+                        </configuration>
+                        <executions>
+                            &lt;!&ndash; run site-maven-plugin's 'site' target as part of the build's normal
+                                'deploy' phase &ndash;&gt;
+                            <execution>
+                                <goals>
+                                    <goal>site</goal>
+                                </goals>
+                                <phase>deploy</phase>
+                            </execution>
+                        </executions>
+                    </plugin>-->
+
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <build>
         <plugins>
