--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.xiongyingqi</groupId>
     <modules>
@@ -40,9 +41,18 @@
 
 
     <repositories>
-        <repository>
+        <!--<repository>
             <id>objectledge</id>
             <url>http://nexus.objectledge.org/nexus/content/repositories/m2thirdparty</url>
+        </repository>-->
+        <repository>
+            <id>osc</id>
+            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/groups/public/</url>
+        </repository>
+        <repository>
+            <id>springsource-repo</id>
+            <name>SpringSource Repository</name>
+            <url>http://repo.spring.io/release/</url>
         </repository>
         <!--<repository>
             <id>kingray</id>
@@ -1033,7 +1043,7 @@
             </dependency>
 
             <dependency>
-                <groupId>net.sourceforge.cpdetector</groupId>
+                <groupId>cpdetector</groupId>
                 <artifactId>cpdetector</artifactId>
                 <version>${cpdetector.version}</version>
                 <exclusions>
@@ -1336,7 +1346,7 @@
             <version>${spring.version}</version>
         </dependency>
         <dependency>
-            <groupId>net.sourceforge.cpdetector</groupId>
+            <groupId>cpdetector</groupId>
             <artifactId>cpdetector</artifactId>
             <version>${cpdetector.version}</version>
         </dependency>
@@ -1493,6 +1503,8 @@
                         <artifactId>maven-release-plugin</artifactId>
                         <version>2.5</version>
                         <configuration>
+                            <releaseVersion></releaseVersion>
+                            <developmentVersion></developmentVersion>
                             <autoVersionSubmodules>true</autoVersionSubmodules>
                             <useReleaseProfile>false</useReleaseProfile>
                             <goals>deploy</goals>
