--- a/pom.xml
+++ b/pom.xml
@@ -46,10 +46,6 @@
             <url>http://nexus.objectledge.org/nexus/content/repositories/m2thirdparty</url>
         </repository>-->
         <repository>
-            <id>osc</id>
-            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/groups/public/</url>
-        </repository>
-        <repository>
             <id>springsource-repo</id>
             <name>SpringSource Repository</name>
             <url>http://repo.spring.io/release/</url>
@@ -1054,6 +1050,12 @@
                 </exclusions>
             </dependency>
 
+            <dependency>
+                <groupId>net.sourceforge.jargs</groupId>
+                <artifactId>jargs</artifactId>
+                <version>1.0</version>
+            </dependency>
+
             <!-- jms -->
             <dependency>
                 <groupId>org.apache.activemq</groupId>
@@ -1124,7 +1126,7 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-    <dependencies>
+    <!--<dependencies>
         <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-parsers</artifactId>
@@ -1139,13 +1141,13 @@
         </dependency>
 
 
-        <!-- log4j -->
+        &lt;!&ndash; log4j &ndash;&gt;
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>${log4j.version}</version>
         </dependency>
-        <!-- LOGGING begin -->
+        &lt;!&ndash; LOGGING begin &ndash;&gt;
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -1157,12 +1159,12 @@
             <version>${slf4j.version}</version>
             <scope>runtime</scope>
         </dependency>
-        <!-- common-logging 实际调用slf4j，使用jcl-over-slf4j的话glassfish4会报错 -->
-        <!--<dependency>
+        &lt;!&ndash; common-logging 实际调用slf4j，使用jcl-over-slf4j的话glassfish4会报错 &ndash;&gt;
+        &lt;!&ndash;<dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
-        </dependency>-->
-        <!-- java.util.logging 实际调用slf4j -->
+        </dependency>&ndash;&gt;
+        &lt;!&ndash; java.util.logging 实际调用slf4j &ndash;&gt;
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jul-to-slf4j</artifactId>
@@ -1182,7 +1184,7 @@
             <version>${javassist.version}</version>
         </dependency>
 
-        <!-- servlet API -->
+        &lt;!&ndash; servlet API &ndash;&gt;
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
@@ -1337,9 +1339,9 @@
             <artifactId>spring-webmvc-portlet</artifactId>
             <version>${spring.version}</version>
         </dependency>
-        <!-- <dependency> <groupId>net.sf.json-lib</groupId> <artifactId>json-lib</artifactId>
+        &lt;!&ndash; <dependency> <groupId>net.sf.json-lib</groupId> <artifactId>json-lib</artifactId>
             <version>2.4</version> <scope>system</scope> <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/json-lib-2.4-jdk15.jar</systemPath>
-            </dependency> -->
+            </dependency> &ndash;&gt;
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
@@ -1360,7 +1362,7 @@
             <artifactId>jackson-core</artifactId>
             <version>${fasterxml.jackson.version}</version>
         </dependency>
-        <!-- jackson old version -->
+        &lt;!&ndash; jackson old version &ndash;&gt;
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
@@ -1378,7 +1380,7 @@
             <artifactId>jchardet</artifactId>
             <version>${jchardet.version}</version>
         </dependency>
-    </dependencies>
+    </dependencies>-->
 
 
     <distributionManagement>
@@ -1766,20 +1768,13 @@
 
         <pluginManagement>
             <plugins>
-                <!--<plugin>
+            <!--
+                <plugin>
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>2.8.1</version>
                     <configuration>
                         <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo
                         </altDeploymentRepository>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-scm-plugin</artifactId>
-                    <version>1.7</version>
-                    <configuration>
-                        <scmVersionType>branch</scmVersionType>
-                        <scmVersion>master</scmVersion>
                     </configuration>
                 </plugin>
                 <plugin>
