--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <name>common_utils</name>
     <artifactId>common_utils</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.9-SNAPSHOT</version>
+    <version>0.0.8</version>
     <description>提供最基础的工具类</description>
     <url>https://github.com/blademainer/common_utils</url>
 
@@ -28,6 +28,7 @@
         <developer>
             <name>Blademainer</name>
             <email>blademainer@gmail.com</email>
+            <url>http://xiongyingqi.com</url>
         </developer>
     </developers>
 
@@ -82,7 +83,7 @@
         <!-- <log4j.version>2.0-beta9</log4j.version> <log4j.sl4j.version>2.0-alpha2</log4j.sl4j.version> -->
         <!--对应hibernate版本为4.3.0.Final以上-->
         <!--<javax.persistence.version>2.1</javax.persistence.version>-->
-        <common_utils.version>0.0.9-SNAPSHOT</common_utils.version>
+        <common_utils.version>0.0.8</common_utils.version>
         <aliyun-openservices.version>1.2.2</aliyun-openservices.version>
         <activemq.version>5.9.0</activemq.version>
         <jsr250.version>1.0</jsr250.version>
@@ -1398,8 +1399,8 @@
         <developerConnection>scm:git:git@github.com:blademainer/common_utils.git</developerConnection>
         <!--<developerConnection>scm:git:ssh://git@github.com:blademainer/common_utils.git</developerConnection>-->
         <url>https://github.com/blademainer/common_utils</url>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>0.0.8.5</tag>
+    </scm>
 
     <profiles>
         <profile>
