--- a/common_log/pom.xml
+++ b/common_log/pom.xml
@@ -64,6 +64,10 @@
             <artifactId>commons-logging</artifactId>
             <version>1.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
 
     </dependencies>
     <build>
