--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <name>common_utils</name>
     <artifactId>common_utils</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.10</version>
+    <version>0.0.11-SNAPSHOT</version>
     <description>提供最基础的工具类</description>
     <url>https://github.com/blademainer/common_utils</url>
 
@@ -88,7 +88,7 @@
         <!-- <log4j.version>2.0-beta9</log4j.version> <log4j.sl4j.version>2.0-alpha2</log4j.sl4j.version> -->
         <!--对应hibernate版本为4.3.0.Final以上-->
         <!--<javax.persistence.version>2.1</javax.persistence.version>-->
-        <common_utils.version>0.0.10</common_utils.version>
+        <common_utils.version>0.0.11-SNAPSHOT</common_utils.version>
         <aliyun-openservices.version>1.2.2</aliyun-openservices.version>
         <activemq.version>5.9.0</activemq.version>
         <jsr250.version>1.0</jsr250.version>
@@ -1423,7 +1423,7 @@
         <developerConnection>scm:git:git@github.com:blademainer/common_utils.git</developerConnection>
         <!--<developerConnection>scm:git:ssh://git@github.com:blademainer/common_utils.git</developerConnection>-->
         <url>https://github.com/blademainer/common_utils</url>
-        <tag>common_utils-0.0.10-1</tag>
+        <tag>common_utils-0.0.8</tag>
     </scm>
 
     <profiles>
