--- a/commons-logic/pom.xml
+++ b/commons-logic/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>common_utils</artifactId>
         <groupId>com.xiongyingqi</groupId>
-        <version>0.0.13</version>
+        <version>0.0.14-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <description>逻辑运算辅助</description>
