--- a/common_log/pom.xml
+++ b/common_log/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>common_utils</artifactId>
         <groupId>com.xiongyingqi</groupId>
-        <version>0.1.2</version>
+        <version>0.1.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>common_log</artifactId>
